# AOE4

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  aoe_analysis.ipynb  docker-compose.yml  live_match_discovery_findings.md  pyproject.toml  run_finish_report.py  run_l1_ablation.py  run_report_only.py  run_s9s10_report.py  run_train.py
aoe4_predict/: __init__.py  baselines.py  civ_analysis.py  cli.py  config.py  evaluate.py  features.py  features_extra.py  output.py  report.py
backend/: API.md  README.md  __init__.py
backend/app/: __init__.py  main.py  middleware.py  resources.py  schemas.py  validation.py
civ_choice/: __init__.py  baselines.py  dataset.py  features.py  report.py  run.py
docs/: outcome_hydration_api_notes.md  outcome_model_card.md
lightning_logs/version_0/: events.out.tfevents.1781188354.Cady.5.0  events.out.tfevents.1781188358.Cady.5.1  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1781188389.Cady.5.0  events.out.tfevents.1781188401.Cady.5.1  hparams.yaml
lightning_logs/version_2/: hparams.yaml  (+2 more)
metadata/: map_metadata.csv  map_metadata_research.csv  map_universe.csv  patch_metadata.csv
ratings_delta/: baselines.py  dataset.py  report.py  run.py
replay_harvest/: README.md  candidates.py  cli.py  config.py  downloader.py  top_players.py
reports/: README.md
tests/: conftest.py  test_api50_feature_overrides.py  test_backend_api.py  test_backend_api_live.py  test_cold_start_priors.py  test_historic_integration_features.py  test_inference_api_parity.py  test_rating_delta.py  test_window_temporal_features.py
(+118 files in other folders)
